--- a/app/src/main/res/layout/activity_homework_detail.xml
+++ b/app/src/main/res/layout/activity_homework_detail.xml
@@ -72,7 +72,7 @@
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/checkBox"/>
+            android:id="@+id/checkbox_complete"/>
     </LinearLayout>
 
     <LinearLayout
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/date_due"
-            android:id="@+id/HDateDueTV"/>
+            android:id="@+id/HDueDateTV"/>
     </LinearLayout>
 
     <LinearLayout
