--- a/app/src/main/res/layout/activity_homework_detail_edit.xml
+++ b/app/src/main/res/layout/activity_homework_detail_edit.xml
@@ -10,12 +10,12 @@
               android:id="@+id/homework_detail_view"
               tools:context="com.example.s9942162b.homework3.HomeworkDetailActivity">
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/homework_detail"
-        android:id="@+id/homework_detail_title_ED"
+        android:id="@+id/homework_detail_title"
         />
 
     <LinearLayout
@@ -40,41 +40,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/homework_title"
+            android:hint="@string/homework_title"
             android:id="@+id/HTitleET"/>
     </LinearLayout>
 
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/homework_completed"
-            android:id="@+id/CompletedTV"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/colon"
-            android:id="@+id/ColonTV2"/>
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/no"
-            android:id="@+id/HCompletedET"/>
-
-        <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/checkbox_complete"/>
-    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -153,7 +122,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/notes"
+            android:hint="@string/notes"
             android:id="@+id/HNotesET"/>
 
     </LinearLayout>
