--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/addhomework"
-        android:id="@+id/button"
+        android:id="@+id/add_button"
         android:layout_gravity="bottom|right"/>
 </LinearLayout>
