--- a/app/src/main/res/layout/activity_homework_detail_edit.xml
+++ b/app/src/main/res/layout/activity_homework_detail_edit.xml
@@ -70,6 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="120dp"
         android:datePickerMode="spinner"
+        android:calendarViewShown="false"
         android:id="@+id/datePickerDueDate"/>
 
     <LinearLayout
@@ -97,6 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="120dp"
         android:datePickerMode="spinner"
+        android:calendarViewShown="false"
         android:id="@+id/datePickerRemindDate"/>
 
     <LinearLayout
