--- a/app/src/main/res/layout/list_item_homework.xml
+++ b/app/src/main/res/layout/list_item_homework.xml
@@ -19,6 +19,7 @@
         android:paddingTop="20dp"
         android:layout_alignParentRight="true"
         android:id="@+id/list_checkbox"
+        android:focusable="false"
         />
 
 </RelativeLayout>
