--- a/app/src/main/res/layout/activity_homework_detail.xml
+++ b/app/src/main/res/layout/activity_homework_detail.xml
@@ -62,12 +62,6 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/colon"
             android:id="@+id/ColonTV2"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/no"
-            android:id="@+id/HCompletedTV"/>
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -168,13 +162,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:text="@string/back"
-            android:id="@+id/Back_Button"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:text="@string/edit"
-            android:id="@+id/Edit_Button"/>
+            android:text="@string/finish"
+            android:id="@+id/Finish_Button"/>
 
     </LinearLayout>
 
